--- a/Sampy/Info.plist
+++ b/Sampy/Info.plist
@@ -3,7 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Sampy needs access to your camera so you can take a photo of what you found</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Sampy needs access so you can select a photo to upload</string>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1Ijoic2FtcHl0ZWFtIiwiYSI6ImNqNDd3M3N2eTA4eWIzM3A3NXcyNTRjenMifQ.LdJeq0MmwUUHNIY6jvszog</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Sampy needs your location to show you any samples near you, and to give you directions to find it</string>
+	<key>CFBundleDisplayName</key>
+	<string>Sampy</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -15,31 +25,38 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.34</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>7c5f2a96ecd454d04481c0b7aa792c7e7b78fcf9</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
